--- a/aria2c.conf
+++ b/aria2c.conf
@@ -4,9 +4,9 @@ rpc-listen-all=true
 max-concurrent-downloads=5
 continue=true
 remote-time=true
-max-connection-per-server=16
+max-connection-per-server=256
 min-split-size=10M
-split=10
+split=256
 max-overall-download-limit=0
 max-download-limit=0
 max-overall-upload-limit=0
@@ -32,7 +32,7 @@ dht-file-path6=dht6.dat
 dht-listen-port=6881-6999
 dht-entry-point=dht.transmissionbt.com:6881
 dht-entry-point6=dht.transmissionbt.com:6881
-user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36
+user-agent=netdisk;P2SP;2.2.70.40;android-android;
 bt-remove-unselected-file=true
 bt-load-saved-metadata=true
 bt-hash-check-seed=true
